--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,14 @@
 {
-    "functions": {
-      "api/*.php": {
-        "runtime": "vercel-php@0.4.0"
-      }
+  "builds": [
+    {
+      "src": "api/**/*.php",
+      "use": "@vercel/php"
     }
-  }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/api/$1"
+    }
+  ]
+}
